[CRNT-37946] : Fix for misalignment of process/activities count on workflow navigation bar.

--- a/skins/modern/src/main/resources/META-INF/xhtml/public/skins/modern/modern.css
+++ b/skins/modern/src/main/resources/META-INF/xhtml/public/skins/modern/modern.css
@@ -6893,6 +6893,12 @@ a span.iceOutFrmt{
 	position: relative;
 	bottom: 2px;
 }
+
+td a span.iceOutFrmt{
+	bottom: 0px;
+}
+
+
 a span.iceOutFrmt:hover{
 	color:#28303B;
 }
